# data-receiver

./: .gitignore  CHANGELOG.md  INSTALL  Makefile.am  README.md  configure.ac
demo/php/: client-push.php
src/: Makefile.am  communicate.c  daemonize.c  daemonize.h  dir.c  dir.h  fcntl.c  fcntl.h  global.h  init.c  init.h  log.c  log.h  main.c  parse_conf.c  parse_conf.h  protocol.c  protocol.h  push.c  setup.h  str.c  string.c  string.h  time.c  time.h  timer.c  timer.h
src/etc/: my-file-queue.conf.default
utils/: bootstrap.sh
