##
## Makefile.am
##
## Copyright (C) 2016-2021 by 
## Mombol - <mobol@163.com>, et al.
## This file is distributed as part of Data-receiver
##

AUTOMAKE_OPTIONS     = foreign no-dependencies

SUBDIRS              = . src

DIST_SUBDIRS         = $(SUBDIRS)

##DISTCLEANFILES   = aclocal.m4 autom4te.cache config.h.in
