##
## Makefile.am
##
## Copyright (C) 2016-2021 by 
## Mombol - <mobol@163.com>, et al.
## This file is distributed as part of Data-receiver
##

bin_PROGRAMS         = datarecevier

datarecevier_SOURCES =    \
global.h                  \
str.c        str.h        \
fcntl.c      fcntl.h      \
dir.c        dir.h        \
parse_conf.c parse_conf.h \
daemonize.c  daemonize.h  \
timer.c      timer.h       \
log.c        log.h        \
communicate.c   communicate.h   \
init.c       init.h       \
main.c       setup.h

AUTOMAKE_OPTIONS     = foreign no-dependencies

